--- a/index.html
+++ b/index.html
@@ -70,13 +70,25 @@
     .container{max-width:var(--max);margin:0 auto}
 
     /* Hero */
-    .hero{
-      padding:86px 16px 56px;
-      background:
-        radial-gradient(900px 420px at 80% -10%, rgba(251,146,60,.16), transparent 60%),
-        radial-gradient(700px 380px at -10% 10%, rgba(249,115,22,.10), transparent 60%);
-      border-bottom:1px solid var(--line)
-    }
+.hero {
+  padding: 86px 16px 56px;
+  position: relative;
+  overflow: hidden;
+  border-bottom: 1px solid var(--line);
+}
+.hero::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: url('hero-bg.jpg') center/cover no-repeat;
+  filter: blur(8px) brightness(0.7);
+  z-index: 0;
+}
+.hero .container {
+  position: relative;
+  z-index: 1;
+}
+
     .hero h1{font-size:clamp(30px,6vw,54px);margin-bottom:10px}
     .hero p{color:var(--muted);margin:0 0 18px}
     .row{display:grid;grid-template-columns:1fr;gap:24px}
@@ -132,6 +144,37 @@
   <section class="hero">
     <div class="container row">
       <div>
+        <h1>A Daunder with Dan</h1>
+        <p class="muted">Around Edinburgh with sights and pints. Small groups (max 4), relaxed pace, and a few wee facts you’ll actually remember.</p>
+        <div class="badges">
+          <span class="pill">~2.5 hours</span>
+          <span class="pill">~5.8 km</span>
+          <span class="pill">Pint stop (optional)</span>
+        </div>
+        <a class="btn" href="https://YOUR-BOOKING-LINK" target="_blank" rel="noopener">Book Now</a>
+        <span style="margin-left:10px"></span>
+        <a class="btn-outline" href="#pricing">See pricing</a>
+      </div>
+      <div>
+        <div class="card">
+          <strong>What this is:</strong>
+          <ul class="list">
+            <li>• A small-group wander with a local.</li>
+            <li>• Views, stories, and a pub break.</li>
+            <li>• Short, memorable bits—not a lecture.</li>
+          </ul>
+          <div style="height:12px"></div>
+          <strong>What this isn’t:</strong>
+          <ul class="list">
+            <li>• Twenty people following a flag.</li>
+            <li>• Endless dates and timelines.</li>
+            <li>• A race round the city.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  
         <h1>A Daunder with Dan</h1>
         <p class="muted">Around Edinburgh with sights and pints. Small groups (max 4), relaxed pace, and a few wee facts you’ll actually remember.</p>
         <div class="badges">
