--- a/index.html
+++ b/index.html
@@ -70,29 +70,53 @@
     .container{max-width:var(--max);margin:0 auto}
 
     /* Hero */
-.hero {
+    .hero {
   padding: 86px 16px 56px;
   position: relative;
   overflow: hidden;
   border-bottom: 1px solid var(--line);
 }
+
 .hero::before {
   content: "";
   position: absolute;
   inset: 0;
   background: url('hero-bg.jpg') center/cover no-repeat;
-  filter: blur(8px) brightness(0.7);
+  filter: blur(4px) brightness(0.7);
   z-index: 0;
 }
+
 .hero .container {
   position: relative;
   z-index: 1;
 }
 
-    .hero h1{font-size:clamp(30px,6vw,54px);margin-bottom:10px}
-    .hero p{color:var(--muted);margin:0 0 18px}
-    .row{display:grid;grid-template-columns:1fr;gap:24px}
-    @media(min-width:880px){.row{grid-template-columns:1.2fr .8fr}}
+.hero h1 {
+  font-size: clamp(30px, 6vw, 54px);
+  margin-bottom: 10px;
+}
+
+.hero p {
+  color: white !important;
+  margin: 0 0 18px;
+}
+
+.hero h1 {
+  color: white !important;
+}
+
+.row {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 24px;
+}
+
+@media (min-width: 880px) {
+  .row {
+    grid-template-columns: 1.2fr .8fr;
+  }
+}
+
 
     /* Cards */
     .card{
