Add mascot image to navbar

--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
 <body>
   <header class="nav">
     <div class="nav-inner">
-      <div class="brand">
-        <img src="logo.png" alt="A Daunder with Dan logo" onerror="this.style.display='none'">
-        
-      </div>
+        <div class="brand">
+            <img src="mascot.png" alt="A Daunder with Dan mascot" style="height: 40px; width: auto;">
+          </div>
+          
       <nav class="links">
         <a href="#about">About</a>
         <a href="#tour">The Tour</a>
