Align mascot and nav text properly

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   margin: 0 auto;
   display: flex;
   gap: 16px;
-  align-items: flex-end; /* 👈 try flex-end instead of center */
+  align-items: center; /* 👈 try flex-end instead of center */
   justify-content: space-between;
   padding: 6px 16px 6px; /* 👈 optional: give top more space */
 }
