Nudge nav text down to align with mascot

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   gap: 16px;
   align-items: center; /* 👈 try flex-end instead of center */
   justify-content: space-between;
-  padding: 6px 16px 6px; /* 👈 optional: give top more space */
+  padding: 10px 16px; /* 👈 optional: give top more space */
 }
 
     .brand{display:flex;align-items:center;gap:10px;font-weight:800}
@@ -67,7 +67,7 @@
   display: flex;
   gap: 16px;
   flex-wrap: wrap;
-  
+  margin-top: 4px;
 }
 
     .btn{
