--- a/index.html
+++ b/index.html
@@ -137,9 +137,8 @@
     /* Cards */
     .card{
       background:var(--card);border:1px solid var(--line);border-radius:var(--radius);padding:22px;
-      box-shadow:var(--shadow).hero-card-highlight {
-  background: linear-gradient(145deg, #fff7ed, #fef3c7);
-}
+      box-shadow:var(--shadow)
+    }
     .list{margin:0;padding:0;list-style:none;display:grid;gap:10px}
     .pill{
       display:inline-block;background:var(--pill);border:1px solid #fde68a;color:#92400e;
@@ -217,11 +216,9 @@
         <a class="btn-outline" href="#pricing">See pricing</a>
       </div>
       <div>
-        <div class="card hero-card-highlight">
-            <strong>What this is:</strong>
-            <ul class="list">
-              ...
-          
+        <div class="card">
+          <strong>What this is:</strong>
+          <ul class="list">
             <li>• A small-group wander with a local.</li>
             <li>• Views, stories, and a pub break.</li>
             <li>• Short, memorable bits—not a lecture.</li>
