Update 'The Tour' section text

--- a/index.html
+++ b/index.html
@@ -261,12 +261,7 @@
     <div class="container grid grid-2">
       <div class="card">
         <h2>The Tour</h2>
-        <p>We start at the (underwhelming) “centre of Edinburgh” bollard, head up Calton Hill for the views, then wander the Old Town and Grassmarket with a pint stop along the way. Short stories, daft details, and time for photos.</p>
-        <ul class="list">
-          <li>• Calton Hill (Nelson Monument, National Monument, Playfair)</li>
-          <li>• Old Town closes & viewpoints (towards Leith)</li>
-          <li>• Grassmarket & Royal Mile</li>
-          <li>• Portuguese cannon cameo</li>
+        <p>We'll meet at the “Centre of Edinburgh” bollard. Then head up Calton Hill for views over the city (unless it's raining, which it probably will be), see some half-finished monuments and hear a few facts worth remembering. From there, we'll cut through the Old Town, the Royal Mile, and the Grassmarket, with a few pints (or coffee) along the way.</p>
         </ul>
       </div>
       <div class="card">
