Update 'The essentials' section

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
       <div class="card">
         <h3 style="margin-top:0">The essentials</h3>
         <ul class="list">
-          <li>• Max 4 people (families of 5 on request)</li>
+          <li>• Max 4 people (Larger groups on request)</li>
           <li>• Language: English</li>
           <li>• Pace: relaxed; hills and cobbles included</li>
           <li>• Meeting point: “Centre of Edinburgh” bollard (Waterloo Place)</li>
