Update 'The essentials' section

--- a/index.html
+++ b/index.html
@@ -268,8 +268,9 @@
         <h3 style="margin-top:0">Good to know</h3>
         <ul class="list">
           <li>• Toilets and pub stop built into the route.</li>
-          <li>• Not heavy on dates; light, human stories instead.</li>
-          <li>• Wet-weather adjustments if needed.</li>
+          <li>• Not heavy on dates; light, fast facts instead.</li>
+          <li>• Wet-weather adjustments if needed (You're in Scotland so bring a jacket).</li>
+          <li>• Sarcasm included.</li>
         </ul>
       </div>
     </div>
