Update 'The essentials' section

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         <h3 style="margin-top:0">What’s included</h3>
         <ul class="list">
           <li>• 2.5-hour guided daunder (~5.8 km)</li>
-          <li>• A planned pub stop (drinks not included)</li>
+          <li>• A planned pub stop </li>
           <li>• Recommendations for the rest of your trip</li>
         </ul>
       </div>
