Update 'The essentials' section

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     <div class="container grid grid-2">
       <div class="card">
         <h2>Pricing & Booking</h2>
-        <p><strong>£40 per person</strong> — small groups only (max 4). Families of 5 by request.</p>
+        <p><strong>£40 per person</strong> — small groups only (max 4). Larger groups by request.</p>
         <a class="btn" href="https://YOUR-BOOKING-LINK" target="_blank" rel="noopener">Book Now</a>
       </div>
       <div class="card">
