Update 'The essentials' section

--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
         <ul class="list">
           <li>• 2.5-hour guided daunder (~5.8 km)</li>
           <li>• A planned pub stop </li>
+          <li>• Great photo stops</li>
           <li>• Recommendations for the rest of your trip</li>
         </ul>
       </div>
