Update 'The essentials' section

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         </div>
         <div class="faq-item">
           <div class="faq-q">Is it suitable for kids?</div>
-          <div class="faq-a">Aye. Content and language adjusted to the group. Families of five can enquire by email.</div>
+          <div class="faq-a">Aye. Content and language adjusted to the group. Families larger than 4 can enquire by email.</div>
         </div>
         <div class="faq-item">
           <div class="faq-q">Where do we meet?</div>
