Update email link in footer

--- a/index.html
+++ b/index.html
@@ -343,10 +343,11 @@
         <span class="tiny">© <span id="y"></span> A Daunder with Dan. All rights reserved.</span>
       </div>
       <div style="text-align:left; margin-top:6px">
-        <a class="btn" href="mailto:youremail@example.com">Email Dan</a>
-        
+        <a class="btn" href="mailto:dcasey28@outlook.com">Email Dan</a>
+
       </div>
-    </div>
+    </div
+    
   </footer>
 
   <!-- JSON-LD: TouristTrip -->
