Remove 'See pricing' button from hero section

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <div class="container row">
       <div>
         <h1>A Daunder with Dan</h1>
-        <p class="muted">Around Edinburgh with sights and pints. Small groups (max 4), relaxed pace, and a few wee facts you’ll actually remember.</p>
+        <p class="muted">A small group wander through Edinburgh with just enough facts to justify going back to the pub, and ticks 'tourism' of the list for your visit.</p>
         <div class="badges">
           <span class="pill">~2.5 hours</span>
           <span class="pill">~5.8 km</span>
