Remove 'See pricing' button from hero section

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <div class="badges">
           <span class="pill">~2.5 hours</span>
           <span class="pill">~5.8 km</span>
-          <span class="pill">Pint stop (optional)</span>
+          <span class="pill">Pint stop</span>
         </div>
         <a class="btn" href="https://YOUR-BOOKING-LINK" target="_blank" rel="noopener">Book Now</a>
         <div class="mascot-hero">
